<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:textAppearance="@style/TextAppearance.AppCompat.Display1">



        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/profilePicture"
            android:maxHeight="128dp"
            android:maxWidth="128dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars[0]" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/profile_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_name" />

        <TextView
            android:id="@+id/text_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/track"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <TextView
            android:id="@+id/text_user_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:text="@string/android"
            app:layout_constraintBottom_toBottomOf="@id/text_track"
            app:layout_constraintStart_toEndOf="@id/text_track"
            app:layout_constraintTop_toTopOf="@id/text_track" />

        <TextView
            android:id="@+id/text_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_track" />

        <TextView
            android:id="@+id/text_user_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:text="@string/nigeria"
            app:layout_constraintBottom_toBottomOf="@id/text_country"
            app:layout_constraintStart_toEndOf="@id/text_country"
            app:layout_constraintTop_toTopOf="@id/text_country"
            tools:ignore="DuplicateIds" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_country" />

        <TextView
            android:id="@+id/text_user_email_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:text="@string/email_address"
            app:layout_constraintBottom_toBottomOf="@id/text_email"
            app:layout_constraintStart_toEndOf="@id/text_email"
            app:layout_constraintTop_toTopOf="@id/text_email" />

        <TextView
            android:id="@+id/text_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_email" />

        <TextView
            android:id="@+id/text_user_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:text="@string/user_phone_number"
            app:layout_constraintBottom_toBottomOf="@id/text_phone_number"
            app:layout_constraintStart_toEndOf="@id/text_phone_number"
            app:layout_constraintTop_toTopOf="@id/text_phone_number" />

        <TextView
            android:id="@+id/title_slack_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/title_slack_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_phone_number" />

        <TextView
            android:id="@+id/text_slack_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:text="@string/text_slack_username"
            app:layout_constraintBottom_toBottomOf="@id/title_slack_username"
            app:layout_constraintStart_toEndOf="@id/title_slack_username"
            app:layout_constraintTop_toTopOf="@id/title_slack_username" />

</androidx.constraintlayout.widget.ConstraintLayout>